--- a/templates/menu.html
+++ b/templates/menu.html
@@ -21,11 +21,11 @@
 
     <nav>
       <ul>
-        <li><a data-i18n="nav_home" href="/">Home</a></li>
-        <li><a data-i18n="nav_menu" href="/menu" class="active">Menu</a></li>
-        <li><a data-i18n="nav_reservation" href="/reservation">Table Reservation</a></li>
-        <li><a data-i18n="nav_contact" href="/contact">Contact</a></li>
-        <li><a data-i18n="nav_findus" href="/find_us">Find Us</a></li>
+      <li><a data-i18n="nav_home" href="/">Home</a></li>
+      <li><a data-i18n="nav_menu" href="/menu" class="active">Menu</a></li>
+      <li><a data-i18n="nav_reservation" href="/reservation">Table Reservation</a></li>
+      <li><a data-i18n="nav_contact" href="/contact">Contact</a></li>
+      <li><a data-i18n="nav_findus" href="/find-us">Find Us</a></li>
 
         <!-- Dropdown -->
         <li class="dropdown">
