change in reservation

--- a/templates/reservation.html
+++ b/templates/reservation.html
@@ -118,7 +118,7 @@
 
   <!-- Footer -->
   <footer>
-    p data-i18n="footer_text">© 2025 FreshBite Kitchen | All Rights Reserved</p>
+    <p data-i18n="footer_text"> © 2025 FreshBite Kitchen | All Rights Reserved</p>
     <nav>
       <a href="#" data-i18n="footer_about">About Us</a> |
       <a href="https://reittiopas.hsl.fi/reitti/-/60.1699,24.9384" target="_blank"
