--- a/templates/menu.html
+++ b/templates/menu.html
@@ -83,6 +83,7 @@
 
   <!-- JavaScript -->
   <script src="{{ url_for('static', filename='js/menu.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/translations.js') }}"></script>
   <script src="{{ url_for('static', filename='js/menu-api.js') }}"></script>
 </body>
 </html>
