--- a/templates/reservation.html
+++ b/templates/reservation.html
@@ -132,6 +132,6 @@
   <script src="{{ url_for('static', filename='js/reservation.js') }}"></script>
   <script src="{{ url_for('static', filename='js/translations.js') }}"></script>
   <script src="{{ url_for('static', filename='js/language.js') }}"></script>
-  <script src="../static/js/home.js"></script>
+  <script src="{{ url_for('static', filename='js/home.js') }}"></script>
 </body>
 </html>
