customer-login working model

--- a/templates/login.html
+++ b/templates/login.html
@@ -60,7 +60,7 @@
   </div>
 
   <!-- JS FILES -->
-  <script src="{{ url_for('static', filename='js/login.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/admin.js') }}"></script>
   <script src="{{ url_for('static', filename='js/translations.js') }}"></script>
   <script src="{{ url_for('static', filename='js/language.js') }}"></script>
 
