--- a/static/css/menu.css
+++ b/static/css/menu.css
@@ -46,6 +46,24 @@ header {
   font-weight: 700;
   font-size: 1.1rem;
 }
+/* Language Switch */
+.lang-switcher {
+  margin-right: 15px;
+}
+
+.lang-switcher button {
+  background-color: #f7f3e9 !important; /* OFF-CREAM */
+  color: #333;
+  padding: 8px 14px;
+  border-radius: 6px;
+  border: none;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.lang-switcher button:hover {
+  background-color: #eee3cc !important;
+}
 
 nav ul {
   display: flex;
