--- a/static/css/customer_login.css
+++ b/static/css/customer_login.css
@@ -50,7 +50,24 @@ body {
   font-weight: 700;
   font-size: 1rem;
 }
+/* Language Switch */
+.lang-switcher {
+  margin-right: 15px;
+}
 
+.lang-switcher button {
+  background-color: #f7f3e9 !important; /* OFF-CREAM */
+  color: #333;
+  padding: 8px 14px;
+  border-radius: 6px;
+  border: none;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.lang-switcher button:hover {
+  background-color: #eee3cc !important;
+}
 nav ul {
   list-style: none;
 }
