--- a/templates/customer_login.html
+++ b/templates/customer_login.html
@@ -15,13 +15,17 @@
   <!-- Navbar -->
   <header class="login-header">
     <div class="navbar">
-      <a href="/" class="logo-link">
+
+      <!-- FIXED URL -->
+      <a href="/app/" class="logo-link">
         <img src="../static/images/logo_sample.jpeg" alt="FreshBite Kitchen Logo" class="logo-img">
         <span data-i18n="logo_text">FreshBite Kitchen</span>
       </a>
+
       <nav>
         <ul>
-          <li><a href="/" class="nav-link" data-i18n="nav_home">Home</a></li>
+          <!-- FIXED URL -->
+          <li><a href="/app/" class="nav-link" data-i18n="nav_home">Home</a></li>
 
           <!-- Language Switch -->
           <li class="lang-switcher">
@@ -65,9 +69,10 @@
 
       <p class="small-text">
         <span data-i18n="login_no_account">Don't have an account?</span>
-        <a href="/customers_signup" id="switchToSignup" data-i18n="login_signup">Sign Up</a>
+        
+        <!-- FIXED URL -->
+        <a href="/app/customers_signup" id="switchToSignup" data-i18n="login_signup">Sign Up</a>
       </p>
-
 
     </form>
   </div>
@@ -78,4 +83,3 @@
 
 </body>
 </html>
-
