--- a/templates/login.html
+++ b/templates/login.html
@@ -17,18 +17,24 @@
   <!-- Navbar -->
   <header class="login-header">
     <div class="navbar">
-      <a href="/" class="logo-link">
+
+      <!-- FIXED URL -->
+      <a href="/app/" class="logo-link">
         <img src="{{ url_for('static', filename='images/logo_sample.jpeg') }}" alt="FreshBite Kitchen Logo" class="logo-img">
         <span>FreshBite Kitchen</span>
       </a>
+
       <nav>
         <ul>
-          <li><a href="/" class="nav-link" data-i18n="nav_home">Home</a></li>
+
+          <!-- FIXED URL -->
+          <li><a href="/app/" class="nav-link" data-i18n="nav_home">Home</a></li>
 
           <!-- LANGUAGE SWITCH BUTTON -->
           <li class="lang-switcher">
             <button id="lang-switch">FI / EN</button>
           </li>
+
         </ul>
       </nav>
     </div>
@@ -56,7 +62,6 @@
       <button type="submit" class="btn" data-i18n="login_button">Login</button>
     </form>
 
-
   </div>
 
   <!-- JS FILES -->
@@ -66,4 +71,5 @@
 
 </body>
 </html>
+
 
