--- a/templates/signup.html
+++ b/templates/signup.html
@@ -13,14 +13,20 @@
   <!-- Navbar -->
   <header class="signup-header">
     <div class="navbar">
-      <a href="admin-dashboard.html" class="logo-link">
+
+      <!-- FIXED -->
+      <a href="/app/admin-dashboard" class="logo-link">
         <img src="../static/images/logo_sample.jpeg" alt="FreshBite Kitchen Logo" class="logo-img">
         <span>FreshBite Admin</span>
       </a>
+
       <nav class="nav-right">
         <ul>
-          <li><a href="home.html" class="nav-link">Home</a></li>
-          <li><a href="login.html" class="nav-link">Login</a></li>
+
+          <!-- FIXED -->
+          <li><a href="/app/" class="nav-link">Home</a></li>
+          <li><a href="/app/login" class="nav-link">Login</a></li>
+
         </ul>
       </nav>
     </div>
@@ -30,10 +36,12 @@
   <div class="signup-container">
     <div class="signup-box">
       <img src="../static/images/logo_sample.jpeg" alt="FreshBite Logo" class="signup-logo">
+
       <h1>Admin <span>Signup</span></h1>
       <p>Register a new admin account to manage FreshBite operations.</p>
 
       <form id="adminSignupForm">
+
         <div class="form-group">
           <label for="name">Full Name</label>
           <input type="text" id="name" name="name" placeholder="Enter your full name" required>
@@ -55,11 +63,18 @@
         </div>
 
         <button type="submit" class="signup-btn">Create Admin Account</button>
-        <p class="switch-text">Already have access? <a href="login.html">Login here</a></p>
+
+        <p class="switch-text">
+          Already have access?
+          <!-- FIXED -->
+          <a href="/app/login">Login here</a>
+        </p>
+
       </form>
     </div>
   </div>
-<script src="../static/js/signup.js"></script>
- 
+
+  <script src="../static/js/signup.js"></script>
+
 </body>
 </html>
