--- a/templates/customer_dashboard.html
+++ b/templates/customer_dashboard.html
@@ -103,7 +103,7 @@
     }
   </script>
 
-  <script src="../static/js/customer_dashboard.js"></script>
+  <script src="{{ url_for('static', filename='js/customer_dashboard.js') }}s"></script>
   <script src="{{ url_for('static', filename='js/translations.js') }}"></script>
   <script src="{{ url_for('static', filename='js/language.js') }}"></script>
 
