--- a/templates/reservation.html
+++ b/templates/reservation.html
@@ -78,7 +78,7 @@
     <div class="reservation-form">
       <h2 data-i18n="reservation_form_title">Reserve a Table</h2>
 
-      <form id="reservationForm">
+      <form id="reservationForm" novalidate>
 
         <label for="name" data-i18n="reservation_label_name">Full Name</label>
         <input type="text" id="name" name="full_name" placeholder="Your Name" required>
